# data-concentrator-lib-cpp

./: .gitignore  CMakeLists.txt  README.md  dconc.cpp  dconc.hpp
binForTest/: CMakeLists.txt  main.cpp
